fix: atualiza collapse da sidebar

--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -14,6 +14,7 @@
   .sidenav .logo-container {
     display: flex;
     align-items: center;
+    justify-items: center;
     padding: 0.938rem 0.938rem 0 0.938rem;
     width: 100%;
   }
@@ -29,19 +30,9 @@
     border: none;
   }
   .sidenav .logo-container .logo-text {
-    margin-left: 1.5rem;
     font-size: 24px;
     font-weight: 700;
     color: #fff;
-  }
-  .sidenav .logo-container .btn-close {
-    margin-left: auto;
-    cursor: pointer;
-    width: 2rem;
-    height: 2rem;
-    border-radius: 50%;
-    background-color: transparent;
-    border: none;
   }
   .sidenav .logo-container .btn-close .fa-times {
     color: #fff;
@@ -53,7 +44,6 @@
     padding: 0.938rem;
     display: flex;
     flex-direction: column;
-    align-items: center;
     height: calc(100% - 3.65rem);
   }
   .sidenav-nav .sidenav-nav-item {
@@ -61,8 +51,6 @@
     margin-bottom: 0.625rem;
   }
   .sidenav-nav .sidenav-nav-item .sidenav-nav-link {
-    display: flex;
-    align-items: center;
     height: 3rem;
     color: #f3f3f3;
     text-decoration: none;
@@ -74,7 +62,6 @@
     width: 2rem;
     min-width: 2rem;
     text-align: center;
-    padding: 12px;
   }
   .sidenav-nav .sidenav-nav-item .sidenav-nav-link .sidenav-link-text {
     margin-left: 1.5rem;
